fix comment edit and delete visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@ form#postForm {
 }
 
 .post {
-  max-witdh: max-content;
+  max-width: inherit;
 }
 
 /* style the header */
@@ -348,12 +348,28 @@ img .logo {
 .team-member {
   border-radius: 8px;
   padding: 20px;
-  text-align: center;
+  text-align: left;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .card-title {
+  align-items: left;
+  text-align: left;
   font-size: 1em;
   color: rgb(3, 51, 6);
+}
+
+.card-body {
+  justify-content: left;
+  justify-items: left;
+  margin: 0;
+  padding: 0;
+}
+
+.card-body * {
+   justify-content: left;
+  justify-items: left;
+  margin: 0;
+  padding: 0;
 }
 
 /* Team member image */
@@ -553,18 +569,22 @@ div.post {
   border: 0.00625em solid #ccc;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   background-color: #56b90655;
   border-radius: 0.5em;
   overflow: hidden;
   width: 100%;
   box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.1);
   position: relative;
+  font-size: 1.5em;
 }
 
 .post img {
   border-radius: 1em;
   border: 0.0625em solid black;
+  max-width: inherit;
+  width: 80%;
+  height: 30%;
 }
 
 .post textarea {
@@ -574,9 +594,9 @@ div.post {
 }
 
 .post form {
-  margin-left: 5em;
-  margin-right: 5em;
-  padding: 1em;
+  margin: auto;
+  padding: .5em;
+  font-size: small;
 }
 
 /* Center the form within the center column */
@@ -615,13 +635,18 @@ label[for="caption"] {
   font-weight: bold;
 }
 
+caption-form {
+  max-width: inherit;
+}
+
 #caption {
   width: 100%;
-  max-width: 31.25em;
+  max-width: inherit;
   padding: 0.5em;
   border: 0.0625em solid #ccc;
   border-radius: 0.25em;
   box-sizing: border-box;
+
 }
 
 /* Style the caption counter */
@@ -661,10 +686,11 @@ label[for="caption"] {
 div#postContainer {
   display: flex;
   flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
   gap: 1.25em;
   padding: 1.25em;
-  max-width: 37.5em;
-  margin: 0 auto;
+  max-width: 80%;
 }
 
 div.comment {
